# euphoria

./: .README.md.un~  .clang-format  .clang-tidy  .gitignore  .gitmodules  .prettierignore  .tgource.json  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  aabb_8h_source.html  actor_8cc_source.html  actor_8h.html  angle_8cc.html  approx__equal_8cc.html  approx__equal_8cc_source.html  approx__equal_8h.html  appveyor.yaml  appveyor.yml  argparse_8cc.html  assert_8cc_source.html  attributebinder_8cc_source.html  axisangle_8h_source.html  base64_8h.html  bezierpath_8cc_source.html  bezierpath_8h_source.html  bitfield_8cc.html  bitfield_8h_source.html  buffer2d_8cc.html  buffer2d_8h_source.html  buffer_8cc.html  buffer_8h.html  buffer_8h_source.html  bufferbuilder2d_8cc_source.html  bufferbuilder2d_8h.html  bufferbuilder2d_8h_source.html  button_8h.html  (+935 more)
base64/: CMakeLists.txt  main.cc
chatbot_test/: CMakeLists.txt  chatbot.json  main.cc
core/: CMakeLists.txt  aabb.cc  aabb.h  angle.cc  angle.h  argparse.cc  argparse.h  assert.cc  assert.h  axisangle.cc  axisangle.h  base64.cc  base64.h  bezierpath.cc  bitfield.h  bufferbuilder2d.cc  bufferbuilder2d.h  cache.h  camera.cc  camera.h  canvaslogic.cc  canvaslogic.h  chatbot.cc  chatbot.h  cint.cc  cint.h  cli_position.cc  cli_position.h  cli_progress_bar.cc  cli_progress_bar.h  cli_progress_dots.cc  cli_progress_dots.h  closestpoint.h  cmdline.cc  cmdline.h  collage.cc  collage.h  colorbrewer.cc  colorbrewer.h  colors.cc  (+263 more)
demo/: CMakeLists.txt  main.cc
duk/: CMakeLists.txt  bind.cc  bind.h  bindclass.cc  bindclass.h  bindfunction.cc  bindfunction.h  bindobject.cc  bindobject.h  bondfunction.cc  bondfunction.h  boundfunction.cc  boundfunction.h  config.h  context.cc  context.h  duk.cc  duk.h  function.cc  function.h  functionreference.cc  functionreference.h  genericfunction.cc  genericfunction.h  genericoverload.cc  genericoverload.h  objectreference.cc  objectreference.h  optional.h  overload.cc  overload.h  prototype.cc  prototype.h  pushvar.h  pushvarimpl.cc  pushvarimpl.h  referencestorage.cc  referencestorage.h  registeredclass.cc  registeredclass.h  (+11 more)
editor/: CMakeLists.txt  browser.cc  browser.h  canvas.cc  canvas.h  main.cc  scimed.cc  scimed.h
engine/: CMakeLists.txt  cameradata.h  componentcreator.cc  componentcreator.h  components.cc  components.h  duk.cc  duk.h  dukintegration.cc  dukintegration.h  dukmathbindings.cc  dukmathbindings.h  dukprint.cc  dukprint.h  dukregistry.cc  dukregistry.h  input.cc  input.h  loadworld.cc  loadworld.h  main.cc  objectemplate.cc  objectemplate.h  systems.cc  systems.h
gui/: CMakeLists.txt  button.cc  button.h  container.cc  container.h  layout.cc  layout.h  layoutcontainer.cc  layoutcontainer.h  layoutdata.cc  layoutdata.h  load.cc  load.h  panelwidget.cc  panelwidget.h  root.cc  root.h  skin.cc  skin.h  textdata.cc  textdata.h  ui.cc  ui.h  uistate.cc  uistate.h  visitor.h  widget.cc  widget.h
img/: CMakeLists.txt  main.cc
maze/: CMakeLists.txt  main.cc
musikmaskin/: CMakeLists.txt  README.md  imgui_extra.h  main.cc  solarized.cc
painter/: CMakeLists.txt  canvas.cc  main.cc
render/: CMakeLists.txt  actor.cc  actor.h  attributebinder.cc  attributebinder.h  buffer.cc  buffer.h  buffer2d.cc  buffer2d.h  bufferbuilder2d.cc  bufferbuilder2d.h  camera.cc  camera.h  compiledlines.cc  compiledmesh.cc  compiledmesh.h  debuggl.cc  debuggl.h  defaultfiles.cc  defaultfiles.h  font.cc  fontcache.cc  fontcache.h  fonts.cc  fonts.h  gl.h  gltypes.h  id.cc  id.h  image.cc  image.h  init.cc  init.h  instance.cc  instance.h  light.cc  light.h  materialshader.cc  materialshader.h  materialshadercache.h  (+31 more)
scimed/: CMakeLists.txt  scimed.cc  wx.h  wxproto.cc  wxproto.h
spacetyper/: CMakeLists.txt  angle.cc  axisangle.cc  axisangle.h  background.cc  background.h  bulletlist.cc  bulletlist.h  debuggl.cc  dictionary.cc  dictionary.h  enemies.cc  enemies.h  enemyword.cc  enemyword.h  files_to_functions.py  fonts.cc  fonts.h  gl.h  image.cc  image.h  interpolate.cc  interpolate.h  main.cc  mat4.h  ninepatch.cc  numeric.cc  numeric.h  proto.cc  rect.h  resource_manager.cc  resource_manager.h  rgb.cc  rgb.h  scalablesprite.cc  scalablesprite.h  scalingsprite.proto  shader.cc  shader.h  sprite.cc  (+14 more)
t3d/: CMakeLists.txt  editor.cc  editor.h  filelist.cc  filelist.h  grid.h  main.cc  t3d.cc  t3d.h  tilelibrary.cc  tilelibrary.h  tool.h  tool_notool.cc  tool_notool.h  tool_placemeshonplane.cc  tool_placemeshonplane.h
test/: CMakeLists.txt  base64.cc  canvas-main.cc  canvas.html  chatbot.cc  coldet.cc  draw-test.cc  font-main.cc  identicon-main.cc  markov.cc  poisson-test.cc  raytracer-main.cc  svg-dump.cc  three-dump.cc  voronoi.cc  worldgen.cc
test3d/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  approx.cc  approx.h  approx_equal.cc  approx_equal.h  falsestring.h  fnv1a.cc  main.cc  radix.cc  stringeq.cc  stringeq.h  stringmerger.cc  test_angle.cc  test_argparse.cc  test_bitfield.cc  test_bufferbuilder2d.cc  test_drunken_bishop.cc  test_duk.cc  test_enumtostring.cc  test_fnv1a.cc  test_font.cc  test_image.cc  test_interpolate.cc  test_lexer.cc  test_loadedfont.cc  test_pack.cc  test_quicksort.cc  test_radix.cc  test_rect.cc  test_rgb_blend.cc  test_stringtable.cc  test_stringutils.cc  test_subvec.cc  test_template.cc  test_tests.cc  test_textbox.cc  test_utf8.cc  test_wordwrap.cc  testangle.cc  testargparse.cc  (+47 more)
unit-tests/: CMakeLists.txt  main.cc  stringeq.cc  test_argparse.cc  test_commandlineparser.cc  test_enumtostring.cc  test_image.cc  test_quat.cc  test_rect.cc  test_rgb.cc  test_stringutils.cc  test_table.cc  test_template.cc  test_textfileparser.cc  test_textparser.cc  test_vfspath.cc
window/: CMakeLists.txt  canvas.cc  canvas.h  engine.cc  engine.h  filesystem.cc  filesystem.h  fpscontroller.cc  fpscontroller.h  imgui.cc  imgui.h  imgui_ext.cc  imgui_ext.h  imgui_extra.cc  imgui_extra.h  imgui_icons.h  imguilibrary.cc  imguilibrary.h  key.cc  key.h  sdlglcontext.cc  sdlglcontext.h  sdllibrary.cc  sdllibrary.h  sdlwindow.cc  sdlwindow.h  (+5 more)
(+7418 files in other folders)
